# calculator

./: CMakeLists.txt  README.md
include/: calculator.h  errors.h  evaluator.h  lexer.h  parser.h  tokens.h
src/: calculator.c  errors.c  evaluator.c  lexer.c  main.c  parser.c  tokens.c
tests/: test_evaluator.c  test_integration.c  test_lexer.c  test_parser.c
